crates/qwik-optimizer-oxc/tests/snapshots/snapshot_tests__snapshot_transform_tests__example_reg_ctx_name_segments_hoisted.snap
---
source: crates/qwik-optimizer-oxc/tests/snapshot_tests.rs
expression: output
snapshot_kind: text
---
============================= test.js ==
import { _noopQrl } from "@qwik.dev/core";
import { _jsxSorted } from "@qwik.dev/core";
import { $, component$, server$, useStyle$ } from "@qwik.dev/core";
const q_Works_component_div_onClick_server_OsNoEFc5SM4 = /*#__PURE__*/ _noopQrl("Works_component_div_onClick_server_OsNoEFc5SM4");
const q_Works_component_t45qL4vNGv0 = /*#__PURE__*/ _noopQrl("Works_component_t45qL4vNGv0");
q_Works_component_div_onClick_server_OsNoEFc5SM4.s(() => console.log("in server", text));
q_Works_component_t45qL4vNGv0.s((props) => {
	useStyle$(STYLES);
	const text = "hola";
	return <div onClick$={server$(() => console.log("in server", text))}></div>;
});
export const Works = componentQrl(q_Works_component_t45qL4vNGv0);
const STYLES = ".class {}";

== DIAGNOSTICS ==
[]
