crates/qwik-optimizer-oxc/tests/snapshots/snapshot_tests__snapshot_transform_tests__example_reg_ctx_name_segments_inlined.snap
---
source: crates/qwik-optimizer-oxc/tests/snapshot_tests.rs
expression: output
snapshot_kind: text
---
============================= test.js ==
import { componentQrl } from "@qwik.dev/core";
import { serverQrl } from "@qwik.dev/core";
export const Works = componentQrl((props) => {
	const text = "hola";
	return _jsxSorted("div", { onClick$: serverQrl(() => console.log("in server", text), "Works_component_div_div_onClick_server_lFRg0PjqeUM", [text]) }, null, null, 1, null);
}, "Works_component_t45qL4vNGv0");

== DIAGNOSTICS ==
[]
