crates/qwik-optimizer-oxc/tests/snapshots/snapshot_tests__snapshot_transform_tests__example_segment_variable_migration.snap
---
source: crates/qwik-optimizer-oxc/tests/snapshot_tests.rs
expression: output
snapshot_kind: text
---
============================= test.tsx ==
import { qrl } from "@qwik.dev/core";
import { _jsxSorted } from "@qwik.dev/core";
import { component$ } from "@qwik.dev/core";
const q__u6BtPnK76q4 = /*#__PURE__*/ qrl(() => import("./test.tsx__u6BtPnK76q4"), "_u6BtPnK76q4");
const q__1_iZVV0eoW44k = /*#__PURE__*/ qrl(() => import("./test.tsx__1_iZVV0eoW44k"), "_1_iZVV0eoW44k");
// This shared variable is used by multiple segments, so it should stay at root
const SHARED_CONFIG = { value: 42 };
// This is an export, so it must stay at root
export const publicHelper = () => console.log("public");
export const App = qrl(() => import("./test.tsx_App_component_ckEPmXZlub0"), "App_component_ckEPmXZlub0");
export const Other = qrl(() => import("./test.tsx_Other_component_C1my3EIdP1k"), "Other_component_C1my3EIdP1k");

============================= test.tsx_Other_component_C1my3EIdP1k.tsx (ENTRY POINT) ==
export const Other_component_C1my3EIdP1k = () => {
	return <div>{SHARED_CONFIG.value}</div>;
};
/*
{
  "origin": "test.tsx",
  "name": "Other_component_C1my3EIdP1k",
  "entry": null,
  "displayName": "test.tsx_Other_component",
  "hash": "C1my3EIdP1k",
  "canonicalFilename": "test.tsx_Other_component_C1my3EIdP1k",
  "path": "",
  "extension": "tsx",
  "parent": null,
  "ctxKind": "function",
  "ctxName": "component$",
  "captures": false,
  "loc": [
    596,
    659
  ]
}
*/
============================= test.tsx_App_component_ckEPmXZlub0.tsx (ENTRY POINT) ==
const helperFn = (msg) => {
	console.log("Helper: " + msg);
	return msg.toUpperCase();
};
export const App_component_ckEPmXZlub0 = () => {
	const result = helperFn('hello');
	return <div>{result} {SHARED_CONFIG.value}</div>;
};
/*
{
  "origin": "test.tsx",
  "name": "App_component_ckEPmXZlub0",
  "entry": null,
  "displayName": "test.tsx_App_component",
  "hash": "ckEPmXZlub0",
  "canonicalFilename": "test.tsx_App_component_ckEPmXZlub0",
  "path": "",
  "extension": "tsx",
  "parent": null,
  "ctxKind": "function",
  "ctxName": "component$",
  "captures": false,
  "loc": [
    465,
    572
  ]
}
*/
== DIAGNOSTICS ==
[]
