crates/qwik-optimizer-oxc/tests/snapshots/snapshot_tests__snapshot_transform_tests__example_self_referential_component_migration.snap
---
source: crates/qwik-optimizer-oxc/tests/snapshot_tests.rs
expression: output
---
============================= test.ts ==
import { qrl } from "@qwik.dev/core";
import { _jsxSorted } from "@qwik.dev/core";
// Self-referential component: the Nested component references itself in its JSX
// This should be migrated to its segment using two-phase emission (let + assign)
// to avoid Temporal Dead Zone errors
export const Nested = qrl(() => import("./test.tsx__u6BtPnK76q4"), "_u6BtPnK76q4");
// Another self-referential component with conditional rendering
export const RecursiveList = qrl(() => import("./test.tsx__1_iZVV0eoW44k"), "_1_iZVV0eoW44k");
// Mutually recursive components: A references B, B references A
const ComponentA = qrl(() => import("./test.tsx__2_sSArpd0iSRk"), "_2_sSArpd0iSRk");
export const MutualExample = qrl(() => import("./test.tsx__4_Gairpaqi1qc"), "_4_Gairpaqi1qc");
export { ComponentB as _auto_ComponentB };
export { ComponentA as _auto_ComponentA };
============================= test.tsx__4_Gairpaqi1qc.ts (ENTRY POINT) ==
export const _4_Gairpaqi1qc = () => {
	return <ComponentA />;
};
/*
{
  "origin": "test.tsx",
  "name": "_4_Gairpaqi1qc",
  "entry": null,
  "displayName": "test.tsx__4",
  "hash": "Gairpaqi1qc",
  "canonicalFilename": "test.tsx__4_Gairpaqi1qc",
  "path": "",
  "extension": "ts",
  "parent": null,
  "ctxKind": "function",
  "ctxName": "component$",
  "captures": false,
  "loc": [
    896,
    941
  ]
}
*/
============================= test.tsx__1_iZVV0eoW44k.ts (ENTRY POINT) ==
import { RecursiveList } from "./test";
export const _1_iZVV0eoW44k = (props) => {
	if (props.depth === 0) return <div>End</div>;
	return (
		<div>
			Level {props.depth}
			<RecursiveList depth={props.depth - 1} />
		</div>
	);
};
/*
{
  "origin": "test.tsx",
  "name": "_1_iZVV0eoW44k",
  "entry": null,
  "displayName": "test.tsx__1",
  "hash": "iZVV0eoW44k",
  "canonicalFilename": "test.tsx__1_iZVV0eoW44k",
  "path": "",
  "extension": "ts",
  "parent": null,
  "ctxKind": "function",
  "ctxName": "component$",
  "captures": false,
  "loc": [
    433,
    605
  ],
  "paramNames": [
    "props"
  ]
}
*/
============================= test.tsx__3_OyZ0gk5pkcU.ts (ENTRY POINT) ==
export const _3_OyZ0gk5pkcU = () => {
	return (
		<div>
			B
			<ComponentA />
		</div>
	);
};
/*
{
  "origin": "test.tsx",
  "name": "_3_OyZ0gk5pkcU",
  "entry": null,
  "displayName": "test.tsx__3",
  "hash": "OyZ0gk5pkcU",
  "canonicalFilename": "test.tsx__3_OyZ0gk5pkcU",
  "path": "",
  "extension": "ts",
  "parent": null,
  "ctxKind": "function",
  "ctxName": "component$",
  "captures": false,
  "loc": [
    789,
    864
  ]
}
*/
============================= test.tsx__2_sSArpd0iSRk.ts (ENTRY POINT) ==
const ComponentB = qrl(() => import("./test.tsx__3_OyZ0gk5pkcU"), "_3_OyZ0gk5pkcU");
export const _2_sSArpd0iSRk = () => {
	return (
		<div>
			A
			<ComponentB />
		</div>
	);
};
/*
{
  "origin": "test.tsx",
  "name": "_2_sSArpd0iSRk",
  "entry": null,
  "displayName": "test.tsx__2",
  "hash": "sSArpd0iSRk",
  "canonicalFilename": "test.tsx__2_sSArpd0iSRk",
  "path": "",
  "extension": "ts",
  "parent": null,
  "ctxKind": "function",
  "ctxName": "component$",
  "captures": false,
  "loc": [
    692,
    767
  ]
}
*/
============================= test.tsx__u6BtPnK76q4.ts (ENTRY POINT) ==
import { Nested } from "./test";
export const _u6BtPnK76q4 = () => {
	return (
		<div>
			<Nested />
		</div>
	);
};
/*
{
  "origin": "test.tsx",
  "name": "_u6BtPnK76q4",
  "entry": null,
  "displayName": "test.tsx_",
  "hash": "u6BtPnK76q4",
  "canonicalFilename": "test.tsx__u6BtPnK76q4",
  "path": "",
  "extension": "ts",
  "parent": null,
  "ctxKind": "function",
  "ctxName": "component$",
  "captures": false,
  "loc": [
    270,
    336
  ]
}
*/
== DIAGNOSTICS ==
[]
