crates/qwik-optimizer-oxc/tests/snapshots/snapshot_tests__snapshot_transform_tests__example_server_auth.snap
---
source: crates/qwik-optimizer-oxc/tests/snapshot_tests.rs
expression: output
---
============================= test.tsx ==
import GitHub from "@auth/core/providers/github";
import Facebook from "next-auth/providers/facebook";
import Google from "next-auth/providers/google";
import { serverAuth$, auth$ } from "@auth/qwik";
export const { onRequest, logout, getSession, signup } = serverAuth$({ providers: [
	GitHub({
		clientId: process.env.GITHUB_ID,
		clientSecret: process.env.GITHUB_SECRET
	}),
	Facebook({
		clientId: import.meta.env.FACEBOOK_ID,
		clientSecret: import.meta.env.FACEBOOK_SECRET
	}),
	Google({
		clientId: process.env.GOOGLE_ID,
		clientSecret: process.env.GOOGLE_SECRET
	})
] });
export const { onRequest, logout, getSession, signup } = auth$({ providers: [
	GitHub({
		clientId: process.env.GITHUB_ID,
		clientSecret: process.env.GITHUB_SECRET
	}),
	Facebook({
		clientId: process.env.FACEBOOK_ID,
		clientSecret: process.env.FACEBOOK_SECRET
	}),
	Google({
		clientId: process.env.GOOGLE_ID,
		clientSecret: process.env.GOOGLE_SECRET
	})
] });

== DIAGNOSTICS ==
[]
