crates/qwik-optimizer-oxc/tests/snapshots/snapshot_tests__snapshot_transform_tests__example_skip_transform.snap
---
source: crates/qwik-optimizer-oxc/tests/snapshot_tests.rs
expression: output
snapshot_kind: text
---
============================= test.tsx ==
import { _jsxSorted } from "@qwik.dev/core";
export const handler = $(()=>console.log("hola"));
export const App = component$((props)=>{
    useStyles$("hola");
    return $(()=>/*#__PURE__*/ _jsxSorted("div", null, null, state.thing, 1, "u6_0"));
});

== DIAGNOSTICS ==
[]
