crates/qwik-optimizer-oxc/tests/snapshots/snapshot_tests__snapshot_transform_tests__example_strip_exports_used.snap
---
source: crates/qwik-optimizer-oxc/tests/snapshot_tests.rs
expression: output
snapshot_kind: text
---
============================= test.tsx ==
import { componentQrl } from "@qwik.dev/core";
import { qrl } from "@qwik.dev/core";
//
const q_test_component_LUXeXe0DQrg = /*#__PURE__*/ qrl(()=>import("./test.tsx_test_component_LUXeXe0DQrg"), "test_component_LUXeXe0DQrg");
//
export const onGet = ()=>{
    throw "Symbol removed by Qwik Optimizer, it can not be called from current platform";
};
export default /*#__PURE__*/ componentQrl(q_test_component_LUXeXe0DQrg);

============================= test.tsx_test_component_useResource_4a8wVY7wh38.tsx (ENTRY POINT) ==
import { onGet } from "./test";
export const test_component_useResource_4a8wVY7wh38 = ()=>{
    return onGet();
};

/*
{
  "origin": "test.tsx",
  "name": "test_component_useResource_4a8wVY7wh38",
  "entry": null,
  "displayName": "test.tsx_test_component_useResource",
  "hash": "4a8wVY7wh38",
  "canonicalFilename": "test.tsx_test_component_useResource_4a8wVY7wh38",
  "path": "",
  "extension": "tsx",
  "parent": "test_component_LUXeXe0DQrg",
  "ctxKind": "function",
  "ctxName": "useResource$",
  "captures": false,
  "loc": [
    249,
    277
  ]
}
*/
============================= test.tsx_test_component_LUXeXe0DQrg.tsx (ENTRY POINT) ==
import { onGet } from "./test";
import { useResource$ } from "@qwik.dev/core";
export const test_component_LUXeXe0DQrg = ()=> {
	useResource$(() => {
		return onGet();
	})
	return <div>cmp</div>
};
/*
{
  "origin": "test.tsx",
  "name": "test_component_LUXeXe0DQrg",
  "entry": null,
  "displayName": "test.tsx_test_component",
  "hash": "LUXeXe0DQrg",
  "canonicalFilename": "test.tsx_test_component_LUXeXe0DQrg",
  "path": "",
  "extension": "tsx",
  "parent": null,
  "ctxKind": "function",
  "ctxName": "component$",
  "captures": false,
  "loc": [
    228,
    303
  ]
}
*/
== DIAGNOSTICS ==
[]
