crates/qwik-optimizer-oxc/tests/snapshots/snapshot_tests__snapshot_transform_tests__example_strip_server_code.snap
---
source: crates/qwik-optimizer-oxc/tests/snapshot_tests.rs
expression: output
snapshot_kind: text
---
============================= test.js ==
import { qrl } from "@qwik.dev/core";
import { _jsxSorted } from "@qwik.dev/core";
import { component$, serverLoader$, serverStuff$, $, client$, useStore, useTask$ } from "@qwik.dev/core";
import { isServer } from "@qwik.dev/core";
import mongo from "mongodb";
import redis from "redis";
import { handler } from "serverless";
const q_s_u6BtPnK76q4 = /* @__PURE__ */ qrl(() => import("./test.tsx__u6BtPnK76q4"), "s_u6BtPnK76q4");
export const Parent = componentQrl(q_s_u6BtPnK76q4);
============================= test.tsx_component_serverStuff_1_IOaKJyEUknw.js (ENTRY POINT) ==
export const s_IOaKJyEUknw = () => {
	// from clien$(), should not be removed
};

/*
{
  "origin": "test.tsx",
  "name": "s_IOaKJyEUknw",
  "entry": null,
  "displayName": "test.tsx_component_serverStuff_1",
  "hash": "IOaKJyEUknw",
  "canonicalFilename": "test.tsx_component_serverStuff_1_IOaKJyEUknw",
  "path": "",
  "extension": "js",
  "parent": "s_vX1B9oMEgiI",
  "ctxKind": "function",
  "ctxName": "client$",
  "captures": false,
  "loc": [
    601,
    664
  ]
}
*/
============================= test.tsx_component_2_ivlVT3MNu2c.js (ENTRY POINT) ==
export const s_ivlVT3MNu2c = () => {
	// Code
};

/*
{
  "origin": "test.tsx",
  "name": "s_ivlVT3MNu2c",
  "entry": null,
  "displayName": "test.tsx_component_2",
  "hash": "ivlVT3MNu2c",
  "canonicalFilename": "test.tsx_component_2_ivlVT3MNu2c",
  "path": "",
  "extension": "js",
  "parent": "s_u6BtPnK76q4",
  "ctxKind": "function",
  "ctxName": "useTask$",
  "captures": false,
  "loc": [
    714,
    744
  ]
}
*/
============================= test.tsx_component_serverStuff_ojRqwHNSAtg.js (ENTRY POINT) ==
export const s_ojRqwHNSAtg = () => {
	// from $(), should not be removed
};

/*
{
  "origin": "test.tsx",
  "name": "s_ojRqwHNSAtg",
  "entry": null,
  "displayName": "test.tsx_component_serverStuff",
  "hash": "ojRqwHNSAtg",
  "canonicalFilename": "test.tsx_component_serverStuff_ojRqwHNSAtg",
  "path": "",
  "extension": "js",
  "parent": "s_vX1B9oMEgiI",
  "ctxKind": "function",
  "ctxName": "$",
  "captures": false,
  "loc": [
    535,
    587
  ]
}
*/
============================= test.tsx__u6BtPnK76q4.js (ENTRY POINT) ==
import { $ } from "@qwik.dev/core";
import { client$ } from "@qwik.dev/core";
import { handler } from "serverless";
import { default as mongo } from "mongodb";
import { serverLoader$ } from "@qwik.dev/core";
import { serverStuff$ } from "@qwik.dev/core";
import { useStore } from "@qwik.dev/core";
import { useTask$ } from "@qwik.dev/core";
export const s_u6BtPnK76q4 = () => {
	const state = useStore({
		text: ''
	});

	// Double count watch
	useTask$(async () => {
		if (!isServer) return;
		state.text = await mongo.users();
		redis.set(state.text);
	});

	serverStuff$(async () => {
		// should be removed too
		const a = $(() => {
			// from $(), should not be removed
		});
		const b = client$(() => {
			// from clien$(), should not be removed
		});
		return [a,b];
	})

	serverLoader$(handler);

	useTask$(() => {
		// Code
	});

	return (
		<div onClick$={() => console.log('parent')}>
			{state.text}
		</div>
	);
};
/*
{
  "origin": "test.tsx",
  "name": "s_u6BtPnK76q4",
  "entry": null,
  "displayName": "test.tsx_",
  "hash": "u6BtPnK76q4",
  "canonicalFilename": "test.tsx__u6BtPnK76q4",
  "path": "",
  "extension": "js",
  "parent": null,
  "ctxKind": "function",
  "ctxName": "component$",
  "captures": false,
  "loc": [
    267,
    835
  ]
}
*/
============================= test.tsx_component_1_vX1B9oMEgiI.js (ENTRY POINT) ==
import { $ } from "@qwik.dev/core";
import { client$ } from "@qwik.dev/core";
export const s_vX1B9oMEgiI = async () => {
	// should be removed too
	const a = $(() => {
		// from $(), should not be removed
	});
	const b = client$(() => {
		// from clien$(), should not be removed
	});
	return [a, b];
};

/*
{
  "origin": "test.tsx",
  "name": "s_vX1B9oMEgiI",
  "entry": null,
  "displayName": "test.tsx_component_1",
  "hash": "vX1B9oMEgiI",
  "canonicalFilename": "test.tsx_component_1_vX1B9oMEgiI",
  "path": "",
  "extension": "js",
  "parent": "s_u6BtPnK76q4",
  "ctxKind": "function",
  "ctxName": "serverStuff$",
  "captures": false,
  "loc": [
    469,
    685
  ]
}
*/
============================= test.tsx_component_ZUK1E201Ins.js (ENTRY POINT) ==
import { _captures } from "@qwik.dev/core";
import { default as mongo } from "mongodb";
export const s_ZUK1E201Ins = async () => {
	const state = _captures[0];
	if (!isServer) return;
	state.text = await mongo.users();
	redis.set(state.text);
};

/*
{
  "origin": "test.tsx",
  "name": "s_ZUK1E201Ins",
  "entry": null,
  "displayName": "test.tsx_component",
  "hash": "ZUK1E201Ins",
  "canonicalFilename": "test.tsx_component_ZUK1E201Ins",
  "path": "",
  "extension": "js",
  "parent": "s_u6BtPnK76q4",
  "ctxKind": "function",
  "ctxName": "useTask$",
  "captures": true,
  "captureNames": [
    "state"
  ],
  "loc": [
    353,
    465
  ]
}
*/
== DIAGNOSTICS ==
[]
